# phosphoswitch-design

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: lmna_y45.yaml
examples/lmna_y45/: README.md  config_motif_fixed_v2.yaml
scripts/: 01_generate.py  02_filter.py  03_select.py  04_rosetta.py  08_select_final.py
src/phosphoswitch_design/: __init__.py  _cli.py  consensus.py  filtering.py  io_utils.py  mechanism.py  rosetta.py  sequence_gen.py
tests/: test_ddg.py  test_mechanism.py
workflows/: run_full_pipeline.sh
